--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Streamed Matches</title>
   <link rel="stylesheet" href="style.css">
 	<script src="togglesearchbar.js" defer></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -19,7 +20,9 @@
       </a>
 
       <!-- Home icon -->
-      <a href="index.html" class="home-icon" title="Home">🏠</a>
+      <a href="index.html" class="home-icon" title="Home">
+		   <i class="fas fa-home"></i>
+	  </a>
 
       <!-- Search -->
       <div class="search-container header-search">
@@ -29,8 +32,12 @@
 
     <!-- Right icons -->
     <div class="header-right">
-      <a href="https://t.me/yourchannel" target="_blank" class="social-icon telegram" title="Join Telegram">📢</a>
-      <a href="https://discord.gg/yourserver" target="_blank" class="social-icon discord" title="Join Discord">💬</a>
+      <a href="https://t.me/yourchannel" target="_blank" class="social-icon telegram" title="Join Telegram">
+		  <i class="fab fa-telegram"></i>
+	  </a>
+      <a href="https://discord.gg/yourserver" target="_blank" class="social-icon discord" title="Join Discord">
+		  <i class="fab fa-discord"></i>
+	  </a>
     </div>
   </div>
 	
@@ -77,4 +84,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
