--- a/Matchinformation/index.html
+++ b/Matchinformation/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Match Information</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Streamed Matches</title>
   <link rel="stylesheet" href="https://raaj648.github.io/newsiteapitest/style.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="https://raaj648.github.io/newsiteapitest/togglesearchbar.js" defer></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -41,7 +41,6 @@
 	  </a>
     </div>
   </div>
-
   <!-- Search Overlay -->
   
 
@@ -72,8 +71,9 @@
   </div>
 </div>
 
-  <script src="../script.js"></script>
+  <script src="https://raaj648.github.io/newsiteapitest/script.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+
 
