--- a/SearchResult/index.html
+++ b/SearchResult/index.html
@@ -215,7 +215,7 @@
         card.appendChild(info);
 
         card.addEventListener("click", () => {
-          window.location.href = `../match-details.html?id=${match.id}`;
+          window.location.href = `https://raaj648.github.io/newsiteapitest/Matchinformation/?id=${match.id}`;
         });
 
         container.appendChild(card);
@@ -244,3 +244,4 @@
   
 </body>
 </html>
+
