--- a/Matchinformation/index.html
+++ b/Matchinformation/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Streamed Matches</title>
+  <title id="page-title">Streamed Matches</title>
   <link rel="stylesheet" href="https://raaj648.github.io/newsiteapitest/style.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://raaj648.github.io/newsiteapitest/togglesearchbar.js" defer></script>
@@ -46,7 +46,7 @@
 
   <!-- Match Info Content -->
   <main class="match-info-container">
-    <h1 id="match-title">Loading match...</h1>
+    <h1 id="page-title">Loading match...</h1>
     <p id="match-description"></p>
 
     <!-- Back Button -->
@@ -75,5 +75,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
