--- a/Matchinformation/index.html
+++ b/Matchinformation/index.html
@@ -46,7 +46,7 @@
 
   <!-- Match Info Content -->
   <main class="match-info-container">
-    <h1 id="page-title">Loading match...</h1>
+    <h1 id="match-title">Loading match...</h1>
     <p id="match-description"></p>
 
     <!-- Back Button -->
@@ -75,6 +75,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
