--- a/Matchinformation/index.html
+++ b/Matchinformation/index.html
@@ -71,10 +71,11 @@
   </div>
 </div>
 
-  <script src="https://raaj648.github.io/newsiteapitest/script.js"></script>
-  <script src="script.js"></script>
+  
+  <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
