--- a/index.html
+++ b/index.html
@@ -7,28 +7,23 @@
   <meta name="description" content="Watch live football, cricket, basketball, and more — all streamed matches in one place.">
   
   <meta property="og:title" content="Streamed Matches Live">
-<meta property="og:description" content="Watch live matches: football, cricket, basketball & more.">
-<meta property="og:image" content="https://methstreams.world/mysite.jpg">
-<meta property="og:type" content="website">
+  <meta property="og:description" content="Watch live matches: football, cricket, basketball & more.">
+  <meta property="og:image" content="https://methstreams.world/mysite.jpg">
+  <meta property="og:type" content="website">
 
-
-  
-  
-  
   <link rel="preconnect" href="https://streamed.pk" crossorigin> 
   <link rel="dns-prefetch" href="//streamed.pk"> 
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin> <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
   <link rel="stylesheet" href="style.css">
-  <!-- Link to the slider's CSS file -->
   <link rel="stylesheet" href="featuredslider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<script src="togglesearchbar.js" defer></script>
-<script src="script.js" defer></script>
-<script src="featuredslider.js" defer></script>
-
+  <script src="togglesearchbar.js" defer></script>
+  <script src="script.js" defer></script>
+  <script src="featuredslider.js" defer></script>
 
 </head>
-<body>
+<!-- === THEME FIX: Add class="dark-theme" directly to the body tag === -->
+<body class="dark-theme">
 
   <!-- Sticky Header -->
   <div class="site-header">
@@ -102,10 +97,8 @@
     </section>
   
     <main id="matches-sections">
-      <!-- Sections will be injected dynamically by JS -->
 	      <div class="loader"></div> <!-- Add a loader here -->
     </main>
-  </div>
   
   <!-- Search Overlay -->
   <div id="search-overlay">
@@ -115,6 +108,6 @@
       <div id="overlay-search-results"></div>
     </div>
   </div>
-
+</div>
 </body>
 </html>
