--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
   <meta property="og:image" content="https://methstreams.world/mysite.jpg">
   <meta property="og:type" content="website">
 
-  <link rel="preconnect" href="https://streamed.pk" crossorigin> 
+  <!-- === PERFORMANCE: Preconnect to the API/image server === -->
+  <link rel="preconnect" href="https://streamed.pk" crossorigin>
   <link rel="dns-prefetch" href="//streamed.pk"> 
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin> <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin> 
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+  
+  <!-- === PERFORMANCE: Single, combined stylesheet to reduce render-blocking requests === -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="featuredslider.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- REMOVED: featuredslider.css (now combined into style.css) -->
+  <!-- REMOVED: Font Awesome CSS (replaced with inline SVGs) -->
+  
   <script src="togglesearchbar.js" defer></script>
   <script src="script.js" defer></script>
   <script src="featuredslider.js" defer></script>
 
 </head>
-<!-- === THEME FIX: Add class="dark-theme" directly to the body tag === -->
 <body class="dark-theme">
 
   <!-- Sticky Header -->
@@ -32,7 +36,8 @@
         <img src="https://methstreams.world/Buffstreams.world.jpg" alt="Site Logo" fetchpriority="high" decoding="async">
       </a>
       <a href="index.html" class="home-icon" title="Home">
-		   <i class="fas fa-home"></i>
+		   <!-- === PERFORMANCE: Replaced Font Awesome icon with inline SVG === -->
+       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor" width="22" height="22"><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 160l-1.1 0c-1.3 0-2.6 0-4 .1s-2.1-.1-3.2-.1H120c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96h256c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v32h-32V287.5c1.3-12.3 1.8-24.7 1.8-37.2c0-32.5-3.8-64.1-11-94.1c-7.4-30.7-19.1-59.8-34.9-86.7c-15.9-27-36.4-51.5-60.8-72.3C343.8 29.1 316.4 16 288 16s-55.8 13.1-79.2 36.5c-24.4 20.8-44.9 45.3-60.8 72.3C132.1 154.6 120.4 183.7 113 214.4c-7.1 30-11 61.6-11 94.1c0 12.5 .5 24.9 1.8 37.2V416h-32c-17.7 0-32-14.3-32-32s14.3-32 32-32h32c18 0 32.1-15 32.1-32.1c0-9.2-3.8-17.9-10-24.1c-11.2-11.2-13.3-28.2-5.1-41.5c8.2-13.3 23.8-21.5 40.1-21.5H288h.2c16.3 0 31.8 8.2 40.1 21.5c8.2 13.3 6.1 30.3-5.1 41.5c-6.1 6.2-10 14.9-10 24.1z"/></svg>
 	  </a>
       <div class="search-container header-search">
         <input type="text" id="search-input" placeholder="Search matches..." autocomplete="off">
@@ -40,10 +45,12 @@
     </div>
     <div class="header-right">
       <a href="https://t.me/yourchannel" target="_blank" rel="noopener noreferrer nofollow" class="social-icon telegram" title="Join Telegram">
-		  <i class="fab fa-telegram"></i>
+		  <!-- === PERFORMANCE: Replaced Font Awesome icon with inline SVG === -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" fill="#0088cc" width="22" height="22"><path d="M248,8C111.033,8,0,119.033,0,256S111.033,504,248,504,496,392.967,496,256,384.967,8,248,8ZM362.952,176.66c-3.732,39.215-19.881,134.378-28.1,178.3-3.476,18.584-10.322,24.816-16.948,25.425-14.4,1.326-25.338-9.517-39.287-18.661-21.224-14.074-30.238-22.71-46.438-35.856-18.416-14.943-6.423-23.223,2.566-35.977,4.474-5.618,97.125-86.542,99.412-86.542,1.332,0,4.823,1.523,4.11,5.155Z"/></svg>
 	  </a>
       <a href="https://discord.gg/yourserver" target="_blank" rel="noopener noreferrer nofollow" class="social-icon discord" title="Join Discord">
-		  <i class="fab fa-discord"></i>
+		  <!-- === PERFORMANCE: Replaced Font Awesome icon with inline SVG === -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" fill="#5865F2" width="22" height="22"><path d="M524.531,69.836a1.5,1.5,0,0,0-1.085.3L440.438,124.1a1.5,1.5,0,0,0-1.085.3L355.563,69.836a1.5,1.5,0,0,0-1.085-.3L294.154,0,98.906,124.1a1.5,1.5,0,0,0-1.085.3L15.031,69.836a1.5,1.5,0,0,0-1.085-.3L0,117.152l98.906,124.1a1.5,1.5,0,0,0,1.085.3L183.82,295.679a1.5,1.5,0,0,0,1.085.3l114.25,69.836a1.5,1.5,0,0,0,1.085-.3l5.225-3.2a1.5,1.5,0,0,0,.866-1.373V353.42l64.363-39.248a1.5,1.5,0,0,0,.866-1.373V252.3a1.5,1.5,0,0,0-.866-1.373l-64.363-39.248a1.5,1.5,0,0,0-.866-1.373V133.4a1.5,1.5,0,0,0,.866-1.373l5.225-3.2a1.5,1.5,0,0,0,1.085-.3l114.25-69.836a1.5,1.5,0,0,0,1.085-.3L640,117.152Z"/></svg>
 	  </a>
     </div>
   </div>
@@ -53,15 +60,10 @@
       <h1>📺 Streamed Matches</h1>
     </header>
   
-    <!-- ============================================= -->
-    <!-- === FEATURED MATCHES SLIDER SECTION START === -->
-    <!-- ============================================= -->
     <section class="featured-section">
-      <!-- Categories row -->
       <div class="categories-wrapper">
         <div class="categories" id="categories" role="tablist" aria-label="Featured categories"></div>
       </div>
-      <!-- Slider & external arrows -->
       <div class="slider-area">
         <button class="nav-arrow nav-left desktop-only" id="prevBtn" aria-label="Previous match">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
@@ -69,7 +71,7 @@
           </svg>
         </button>
         <div class="slider-container" id="sliderContainer">
-          <div class="slider" id="slider"><!-- slide injected --></div>
+          <div class="slider" id="slider"></div>
         </div>
         <button class="nav-arrow nav-right desktop-only" id="nextBtn" aria-label="Next match">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
@@ -78,11 +80,7 @@
         </button>
       </div>
     </section>
-    <!-- =========================================== -->
-    <!-- === FEATURED MATCHES SLIDER SECTION END === -->
-    <!-- =========================================== -->
 
-    <!-- Categories Section -->
     <section id="categories-section">
       <div class="section-header">
         <h2>🏆 Categories</h2>
@@ -91,16 +89,13 @@
           <button id="cat-right">→</button>
         </div>
       </div>
-      <div class="categories-container" id="categories-container">
-        <!-- Category cards injected dynamically -->
-      </div>
+      <div class="categories-container" id="categories-container"></div>
     </section>
   
     <main id="matches-sections">
-	      <div class="loader"></div> <!-- Add a loader here -->
+	      <div class="loader"></div>
     </main>
   
-  <!-- Search Overlay -->
   <div id="search-overlay">
     <div class="search-overlay-content">
       <button id="search-close">&times;</button>
