--- a/Matchinformation/index.html
+++ b/Matchinformation/index.html
@@ -41,7 +41,7 @@
       <section id="streams-section">
         <!-- ✅ MODIFIED: Removed the "streams-header" div wrapper -->
         <button id="back-button" class="back-button-styled">
-          <span>BCK</span><span class="separator">•</span><span>Back</span>
+          <span>< BCK</span><span class="separator">•</span><span>Back</span>
         </button>
         <p id="sources-summary"></p>
         
@@ -65,3 +65,4 @@
   
 </body>
 </html>
+
