--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   <script src="main.js" defer></script>
 
 </head>
+<!-- In index.html, replace the entire <body> with this -->
 <body class="dark-theme">
 
-  <!-- Sticky Header -->
+  <!-- Sticky Header (no changes here) -->
   <div class="site-header">
     <div class="header-left">
       <a href="index.html" class="site-logo">
-        <!-- CLS FIX: Added width and height attributes to prevent layout shift -->
         <img src="https://methstreams.world/Buffstreams.world.jpg" alt="Site Logo" fetchpriority="high" decoding="async" width="135" height="40">
       </a>
       <a href="index.html" class="header-btn" title="Home">Home</a>
@@ -64,14 +64,32 @@
   
     <section class="featured-section">
       <div class="categories-wrapper">
-        <div class="categories" id="categories" role="tablist" aria-label="Featured categories"></div>
+        <div class="categories" id="categories" role="tablist" aria-label="Featured categories">
+            <!-- Skeleton for category tabs -->
+            <div class="cat-btn is-loading"><span>&nbsp;</span></div>
+            <div class="cat-btn is-loading"><span>&nbsp;</span></div>
+            <div class="cat-btn is-loading"><span>&nbsp;</span></div>
+        </div>
       </div>
       <div class="slider-area">
         <button class="nav-arrow nav-left desktop-only" id="prevBtn" aria-label="Previous match">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         </button>
         <div class="slider-container" id="sliderContainer">
-          <div class="slider" id="slider"></div>
+          <div class="slider" id="slider">
+            <!-- === SKELETON LOADER FOR THE SLIDER === -->
+            <div class="slide is-loading">
+              <div class="slide-header"><span class="featured-label">&nbsp;</span><div class="slide-category">&nbsp;</div></div>
+              <div class="countdown"></div>
+              <div class="match-row">
+                <div class="home-section"><div class="team-name">&nbsp;</div><div class="team-logo"></div></div>
+                <div class="vs-section"><div class="vs-block">VS</div></div>
+                <div class="away-section"><div class="team-logo"></div><div class="team-name">&nbsp;</div></div>
+              </div>
+              <div class="date-time">&nbsp;</div>
+              <a class="watch-btn">&nbsp;</a>
+            </div>
+          </div>
         </div>
         <button class="nav-arrow nav-right desktop-only" id="nextBtn" aria-label="Next match">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -87,7 +105,13 @@
           <button id="cat-right">→</button>
         </div>
       </div>
-      <div class="categories-container" id="categories-container"></div>
+      <div class="categories-container" id="categories-container">
+        <!-- === SKELETON LOADER FOR CATEGORY CARDS === -->
+        <div class="category-card is-loading"></div>
+        <div class="category-card is-loading"></div>
+        <div class="category-card is-loading"></div>
+        <div class="category-card is-loading"></div>
+      </div>
     </section>
   
     <main id="matches-sections">
@@ -104,5 +128,6 @@
   </div>
 </body>
 </html>
+
 
 
